--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,20 @@
         android:roundIcon="@mipmap/ic_porua_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Porua"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        tools:ignore="DataExtractionRules">
+        <activity
+            android:name=".Nov"
+            android:exported="false" />
+        <activity
+            android:name=".menu"
+            android:exported="false" />
+        <activity
+            android:name=".home"
+            android:exported="false" />
+        <activity
+            android:name=".Swap_Page2"
+            android:exported="false" />
         <activity
             android:name=".Profile"
             android:exported="false" />
@@ -63,7 +76,7 @@
         <activity
             android:name=".startActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -71,6 +84,29 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="1630906110991591" />
+
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="Porua"
+            tools:ignore="MissingClass" />
+
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true"
+            tools:ignore="MissingClass">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="https://project-porua-1556b.firebaseapp.com/__/auth/handler" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
