--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,17 @@
         android:roundIcon="@mipmap/ic_porua_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Porua"
-        tools:targetApi="31"
-        tools:ignore="DataExtractionRules">
+        tools:ignore="DataExtractionRules"
+        tools:targetApi="31">
+        <activity
+            android:name=".uploadbooks"
+            android:exported="false" />
+        <activity
+            android:name=".desc"
+            android:exported="false" />
+        <activity
+            android:name=".test"
+            android:exported="false" />
         <activity
             android:name=".Nov"
             android:exported="false" />
@@ -94,19 +103,19 @@
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="Porua"
             tools:ignore="MissingClass" />
-
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true"
             tools:ignore="MissingClass">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="https://project-porua-1556b.firebaseapp.com/__/auth/handler" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
