--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         tools:ignore="DataExtractionRules"
         tools:targetApi="31">
         <activity
+            android:name=".FetchBook"
+            android:exported="false" />
+        <activity
             android:name=".uploadbooks"
             android:exported="false" />
         <activity
